# docs

./: mkdocs.yml
plugins/: README.md  pyproject.toml
plugins/custom_markdown_plugins/: version.py
